mds: fix filelock state when Fc is issued

LOCK_MIX is is a transition state for muti MDSs could do read/write
at the same time, but the Fcb caps are not allowed.

When the Fc cap is issued, the lock state should be excl.

Fixes: https://tracker.ceph.com/issues/45935
Signed-off-by: Xiubo Li <xiubli@redhat.com>